# webclient

./: .gitignore  Cargo.toml  README.md  authors.json  index.html  package.json  rustfmt.toml  shell.nix  tailwind.config.js
.github/workflows/: main.yml  rust.yml
css/: base.css  custom.css  styles.css
favicons/: site.webmanifest
graphql/: queries.graphql  schema.graphql
src/: components.rs  lib.rs  page.rs  utils.rs
src/component/: auth_component.rs  hero_component.rs
src/components/: auth_component.rs  mod.rs
src/domain/: user.rs
src/gateway/: mod.rs  user_gateway.rs
src/gateway/mock/: mock_user_gateway.rs  mod.rs
src/page/: about.rs  home.rs  not_found.rs  profile.rs
src/page/partial/: footer.rs  header.rs
src/port/: mod.rs  user.rs  user_port.rs
src/service/: graphql.rs
src/usecase/: user.rs
src/view/: messages.rs
src/view/components/: auth_component.rs  hero_component.rs
static/mocks/: mock_user.json
static/templates/: loading_page.hbs
