[package]
version = "0.1.0"
name = "lolhub_webclient"
repository = "https://github.com/lolhub-dev/webclient"
authors = ["Daniel Tabellion <lolhub.dev@gmail.com>"]
description = ""
categories = ["wasm", "rust", "tailwindcss", "seed", "personal", "website"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[dependencies]
# Referenced commit fixes base url and memory bugs in Seed 0.7.0
# (https://github.com/seed-rs/seed/pull/454 + https://github.com/seed-rs/seed/pull/455).
# Replace with "0.8.0" once the new Seed version is released.
seed = { git = "https://github.com/seed-rs/seed", rev = "0a538f0" }
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = "1.0.115"
serde-wasm-bindgen = "0.1.3"
serde_json = "1.0.57"
lipsum = "0.7.0" 
regex = "0.2"
futures = "0.3.5"
async-trait ="0.1.39"

[dependencies.web-sys]
version = "0.3.39"
features = [
  "ScrollToOptions",
  "Navigator",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
